<!--
  ~ Copyright (c) 2019. Francisco Javier Ordoñez Morales, Mathias Ciliberto, Daniel Roggen
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to use,
  ~ copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
  ~ Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="app_name">Test</string>
    <string name="shared_pref_key">strc.wear.test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="text_card_new_procedure">New procedure</string>
    <string name="text_card_settings">Settings</string>

    <string name="footnote_card">Wearable technologies</string>

    <string name="text_card_input_settings">Input set to</string>
    <string name="text_card_input_speech">speech</string>
    <string name="text_card_input_discrete">discrete gestures</string>
    <string name="text_card_input_continuous">continuous gestures</string>

    <string name="text_card_sensitivity_settings">Speed set to</string>
    <string name="text_card_sensitivity_speed_1">very slow</string>
    <string name="text_card_sensitivity_speed_2">slow</string>
    <string name="text_card_sensitivity_speed_3">normal</string>
    <string name="text_card_sensitivity_speed_4">fast</string>
    <string name="text_card_sensitivity_speed_5">very fast</string>

    <string name="text_card_grid_size_settings">Grid density set to</string>
    <string name="text_card_grid_size_low">low</string>
    <string name="text_card_grid_size_medium">medium</string>
    <string name="text_card_grid_size_high">high</string>

    <string name="text_card_coor_recog_settings">Coordinates recognition based on</string>
    <string name="text_card_coor_recog_match">full match</string>
    <string name="text_card_coor_recog_letter">first letter</string>
    <string name="text_card_coor_recog_similarity">similarity</string>

    <string-array name="indexes_alphabet">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>Q</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="phonetic_alphabet">
        <item>alpha</item>
        <item>bravo</item>
        <item>charlie</item>
        <item>delta</item>
        <item>echo</item>
        <item>foxtrot</item>
        <item>golf</item>
        <item>hotel</item>
        <item>india</item>
        <item>juliett</item>
        <item>kilo</item>
        <item>lima</item>
        <item>mike</item>
        <item>november</item>
        <item>oscar</item>
        <item>papa</item>
        <item>quebec</item>
        <item>romeo</item>
        <item>sierra</item>
        <item>tango</item>
        <item>uniform</item>
        <item>victor</item>
        <item>whiskey</item>
        <item>x-ray</item>
        <item>yankee</item>
        <item>zulu</item>
    </string-array>

    <string name="menu_new_cell">New cell</string>
    <string name="menu_undo_cell">Undo cell</string>
    <string name="menu_exit_test">Exit procedure</string>

    <string-array name="symbols_array">
        <item>one</item>
        <item>two</item>
        <item>three</item>
        <item>four</item>
        <item>five</item>
        <item>six</item>
        <item>seven</item>
    </string-array>

    <string-array name="symbols_numbers_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="sensors_demo">Sensors demo</string>
    <string name="accelerometerX">Accelerometer x</string>
    <string name="accelerometerY">Accelerometer y</string>
    <string name="accelerometerZ">Accelerometer z</string>
    <string name="gyroscopeX">Gyroscope x</string>
    <string name="gyroscopeY">Gyroscope y</string>
    <string name="gyroscopeZ">Gyroscope z</string>
    <string name="magneticX">Magnetic x</string>
    <string name="magneticY">Magnetic y</string>
    <string name="magneticZ">Magnetic z</string>

</resources>
