<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019. Francisco Javier Ordoñez Morales, Mathias Ciliberto, Daniel Roggen
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to use,
  ~ copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
  ~ Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/acc_X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginTop="@dimen/card_margin_top"
        android:text="@string/accelerometerX"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_X_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acc_X"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/acc_X"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/accelerometerY"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_Y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acc_Y"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_below="@+id/acc_Y"
        android:text="@string/accelerometerZ"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/acc_Z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/acc_Z"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_divider_height"
        android:layout_below="@+id/acc_Z"
        android:layout_marginTop="@dimen/table_divider_margin"
        android:layout_marginBottom="@dimen/table_divider_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/gyro_X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divider1"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/gyroscopeX"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gyro_X_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gyro_X"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gyro_Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gyro_X"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/gyroscopeY"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gyro_Y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gyro_Y"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gyro_Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_below="@+id/gyro_Y"
        android:text="@string/gyroscopeZ"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/gyro_Z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/gyro_Z"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/table_divider_height"
        android:layout_below="@+id/gyro_Z"
        android:layout_marginTop="@dimen/table_divider_margin"
        android:layout_marginBottom="@dimen/table_divider_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/mag_X"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/divider2"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/magneticX"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mag_X_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mag_X"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mag_Y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mag_X"
        android:layout_marginLeft="@dimen/card_margin"
        android:text="@string/magneticY"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mag_Y_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mag_Y"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mag_Z"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_below="@+id/mag_Y"
        android:text="@string/magneticZ"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/mag_Z_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mag_Z"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/card_margin_right"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>